--- a/CarDiaryApp/Base.lproj/Main.storyboard
+++ b/CarDiaryApp/Base.lproj/Main.storyboard
@@ -17,37 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="H7L-5f-zsv">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="H7L-5f-zsv">
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="fQ0-t5-tWC" detailTextLabel="nmh-mh-i2G" rowHeight="133" style="IBUITableViewCellStyleValue1" id="K8V-4p-yce">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="133"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCell" rowHeight="185" id="K8V-4p-yce">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="185"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K8V-4p-yce" id="ckr-yd-s1P">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="133"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="185"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fQ0-t5-tWC">
-                                                    <rect key="frame" x="20" y="60.000000000000007" width="25" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nmh-mh-i2G">
-                                                    <rect key="frame" x="340.33333333333331" y="60.000000000000007" width="32.666666666666664" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="u0D-eQ-abm" kind="show" id="FvH-0P-13a"/>
+                                            <segue destination="u0D-eQ-abm" kind="show" id="z7n-4s-8XT"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -59,11 +42,21 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="2g4-S2-cSI"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BJg-d7-mzV"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SYV-0L-Dgu"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ZXy-pW-LDf"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ff6-JR-Ck3"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hfu-Yr-tfb"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lKi-NQ-aTM"/>
+                            <constraint firstItem="H7L-5f-zsv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="omx-iM-uDl"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="投稿一覧" id="05Y-sf-ZgJ">
                         <barButtonItem key="rightBarButtonItem" title="NEW" id="5On-Ld-1aR">
                             <connections>
-                                <segue destination="vGQ-xO-RMf" kind="show" id="A1B-hG-AgS"/>
+                                <segue destination="vGQ-xO-RMf" kind="show" id="v7T-Ea-8LP"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -235,7 +228,7 @@
                         <outlet property="contentField" destination="Uxv-eW-VL2" id="HE8-t9-vAz"/>
                         <outlet property="datePicker" destination="gML-qV-4cl" id="fZN-s8-pAa"/>
                         <outlet property="imageView" destination="sKR-EJ-RHG" id="w7m-7y-bQG"/>
-                        <outlet property="itemField" destination="5HK-3L-vpV" id="hNA-jP-qp4"/>
+                        <outlet property="itemField" destination="5HK-3L-vpV" id="OzS-eF-mds"/>
                         <outlet property="mapView" destination="BZ1-Hf-nHe" id="reg-SP-geM"/>
                         <outlet property="scrollView" destination="rHE-tG-ya8" id="eFG-4z-ogV"/>
                     </connections>
@@ -247,7 +240,7 @@
         <!--日記-->
         <scene sceneID="p2Y-iH-sH3">
             <objects>
-                <viewController id="u0D-eQ-abm" customClass="showViewController" customModule="CarDiaryApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="showView" id="u0D-eQ-abm" customClass="showViewController" customModule="CarDiaryApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ydO-GW-fQ7">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -280,7 +273,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LFr-q9-AyG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="976" y="824"/>
+            <point key="canvasLocation" x="260" y="783"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="qrn-t7-gYf">
